--- a/css/style.css
+++ b/css/style.css
@@ -222,123 +222,255 @@ html,body{
   
 }
 
-/* project*/
+/* project */
+
+
 .project{
     width: 100%;
     height: 400px;
-    
-   
-    padding: 0;
-    margin: 0;
-}
 
-.project .title{
-    /* width: 100%;
-    height: 100%; */
-   
     display: flex;
     justify-content: center;
     align-items: center;
 
-    margin-top: 80px;
+    margin-top: 60px;
+   
+}
+
+.construction{
+    width: 300px;
+    height: 300px;
+    background-color: rgba(0,0,0,0.2);
+
+    border: 1.5px solid rgba(0,0,0,0.3);
+    border-radius: 10px;
+    margin: 60px;
+}
+
+.interior{
+    width: 300px;
+    height: 300px;
+    background-color: rgba(0,0,0,0.2);
+
+    border: 1.5px solid rgba(0,0,0,0.3);
+    border-radius: 10px;
+    margin: 60px;
 
 }
 
-.project .title .title2 span{
-    width: 200px;
-    height: 15px;
-    background-color: #000;
+.upvc{
+    width: 300px;
+    height: 300px;
+    background-color: rgba(0,0,0,0.2);
+
+    border: 1.5px solid rgba(0,0,0,0.3);
+    border-radius: 10px;
+    margin: 60px;
 }
 
-.project .title .title2{
+.project .image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 30px;
+}
+.project .image img{
+    width: 100px;
+    height: 100px;
+     
+}
+
+
+.project .paragraph{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 8px;
+    margin-top: 15px;
+}
+
+/* footer */
+
+.footer-container{
+    width: 100%;
+    height: 500px;
+    background-color: #444;
+    color: #fff;
+}
+.footer{
+    
+
+    display: flex;
+    margin-top: 60px;
+    
+}
+
+.aboutus{
+    width: 500px;
+    height: 200px;
+
+    text-align: justify;
+    line-height: 30px;
+    margin-left: 20px;
+   
+}
+
+.aboutus h1{
+
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+
+}
+
+.aboutus p{
     font-family: sans-serif;
-    font-size: 60px;
-    font-weight: bold;
-    color: rgba(0,0,0,1);
-    text-transform: uppercase;
+    font-size: 1rem;
+   
+    margin-top: 30px;
+}
+
+.quick-link{
+    width: 150px;
     
+    margin-top: 90px;
+    margin-left: 140px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+/* .quick-link h2{
+   
+} */
+
+.quick-link a{
+    color: #fff;
+    text-decoration: none;
+    line-height: 10px;
+    margin-top: 30px;
+}
+
+.social-media{
+    
+
+   margin-top: 90px;
+   margin-left: 140px;
+}
+
+.social-media h2{
+    text-align: center;
+}
+
+.social-media a{
+    width: 200px;
+    height: 200px;
+    font-size: 3rem;
+   
+    color: #fff;
+   
+    margin-top: 10px;
+    margin-left: 30px;
+    text-decoration: none;
+
     
     
 }
 
 
-.project .subproject{
+
+/* service-construction */
+/* .service-construction{
+    width: 100%;
+    height: 500px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.service-construction .construction-img{
+    width: 50%;
+}
+.service-construction .construction-img img{
+    width: 250px;
+    height: 250px;
+
+    margin-top: 50px;
+    margin-left: 150px;
+   
+   
+}
+
+
+.service-construction .construction-paragraph{
+    width: 50%;
+    height: 100%;
+}
+
+.service-construction .construction-paragraph p{
+    font-family: sans-serif;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    text-align: justify;
+    margin-top: 180px;
+    margin-right: 30px;
+    
+} */
+
+/* service-interior */
+
+.service-interior{
     width: 100%;
     height: 100%;
-   
+
     display: flex;
     justify-content: center;
     align-items: center;
-   
-    margin-top: 20px;
-
-}
-
-.project .subproject .box{
-    width: 250px;
-    height: 220px;
-    background-color: rgba(0,0,0,0.06);
-
-    margin: 0px 40px;
-    border: 2px solid rgba(0,0,0,0.2);
-    border-radius: 10px;
-   
-    cursor: pointer;
-    transition: all 1s;
-
-    
-}
-
-.project .subproject .box p{
-    
-    
-    font-size: 20px;
-    color: var(--second-color);
-    text-transform: uppercase;
-    text-align: center;
-
-    margin-top: 40px;
-    /* margin-left: 30px; */
-    display: block;
-
-   
-
-
-}
-
-.project .subproject .box span{
-
-    font-size: 20px;
-    font-weight: bold;
-    color: var(--second-color);
-    text-align: center;
-    margin-top: 30px;
-    /* margin-left: 30px; */
-    display: block;
 }
 
 
+.service-interior .interior-paragraph{
+    width: 50%;
+    height: 100%;
+}
 
-.project .subproject .box .boxbtn a{
-    width: 200px;
-    
+.service-interior .interior-paragraph p{
+    font-family: sans-serif;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    text-align: justify;
+    margin-top: 130px;
+    margin-right: 50px;
+}
+
+.service-interior .interior-img{
+    width: 50%;
+}
+
+
+.service-interior .interior-img img{
+width: 300px;
+height: 300px;
+
+margin-top: 50px;
+margin-left: 130px;
+}
+
+.social-two a{
+    font-size: 3rem;
+    color: #fff;
+
     text-decoration: none;
-    background-color: rgba(0,0,0,0.7);
-    color: var(--first-color);
-    text-align: center;
-    padding: 10px;
 
-    margin: 20px;
-    border-radius: 10px;
-
-
-    display: block;
-   
-
-}
-
-
-
+} 
  /* hover */
  /* home hover */
  .header .menu ul li:hover a{
